@@ -2,6 +2,9 @@ Wed Jun 21 2006  Loic Dachary  <loic@dachary.org>
 
 	* Release 1.0.21
 
+	* pokernetwork/pokerserver.py (PokerService.tableMoneyAndBet): gracefully cope with
+	  null values
+
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection:PACKET_POKER_CANCELED): 
           self.readyToPlay(packet.game_id)
 
